# shunt-yard

./: CHANGELOG.md  README.md  shunt-yard.cabal
app/: Main.hs
src/ShuntYard/: Evaluator.hs  Lexer.hs  Operator.hs  Parser.hs  Token.hs
tests/: AssertList.hs  MonadicList.hs  Test.hs  test.txt
tests/ShuntYard/: EvaluatorTest.hs  LexerTest.hs  ParserTest.hs
