cabal-version:      2.4
name:               shunt-yard
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             paolino
maintainer:         paolo.veronelli@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    ShuntYard.Evaluator
    ShuntYard.Lexer
    ShuntYard.Parser

  -- Modules included in this library but not exported.
  -- other-modules:
  other-extensions:
    BlockArguments
    GADTs
    LambdaCase

  build-depends:
    , base          ^>=4.17.2.0
    , mtl           ^>=2.2.2
    , operational
    , transformers  ^>=0.5.6.2

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite shunt-yard-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  -- Directories containing source files.
  hs-source-dirs:   tests
  main-is:          Test.hs
  build-depends:
    , base          ^>=4.17.2.0
    , HUnit
    , operational
    , shunt-yard

  other-modules:
    AssertList
    MonadicList
    ShuntYard.EvaluatorTest
    ShuntYard.LexerTest
    ShuntYard.ParserTest
