cabal-version:      3.4
name:               shunt-yard
version:            0.1.0.0
synopsis:           Shuntyard algorithm implementation, with evaluator
description:        Please see README.md
license:            Apache-2.0
author:             paolino
maintainer:         paolo.veronelli@gmail.com
category:           algorithms
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    ShuntYard.Evaluator
    ShuntYard.Lexer
    ShuntYard.Operator
    ShuntYard.Parser
    ShuntYard.Token

  build-depends:
    , base          ^>=4.17.2.0
    , mtl           ^>=2.2.2
    , operational
    , transformers  ^>=0.5.6.2

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite shunt-yard-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  -- Directories containing source files.
  hs-source-dirs:   tests
  ghc-options:      -O2
  main-is:          Test.hs
  build-depends:
    , base         ^>=4.17.2.0
    , HUnit
    , operational
    , shunt-yard

  other-modules:
    AssertList
    MonadicList
    ShuntYard.EvaluatorTest
    ShuntYard.LexerTest
    ShuntYard.ParserTest

executable sy
  main-is:          Main.hs
  ghc-options:      -O2
  build-depends:
    , base        ^>=4.17.2.0
    , shunt-yard

  hs-source-dirs:   app
  default-language: Haskell2010
